rocketchat/rocket/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketchat-server
  namespace: rocketchat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rocketchat-server
  template:
    metadata:
      labels:
        app: rocketchat-server
    spec:
      containers:
        - name: rocketchat-server
          image: rocketchat/rocket.chat:latest
          ports:
            - containerPort: 3000
          livenessProbe:
            exec:
              command:
                - node
                - --eval
                - 'const http = require(''http''); const options = {host: ''0.0.0.0'', port: 3000, timeout: 2000, path:''/health''}; const healthCheck = http.request(options, (res) => {console.log(''HEALTHCHECK STATUS:'', res.statusCode); if (res.statusCode == 200) {process.exit(0);} else {process.exit(1);}}); healthCheck.on(''error'', function (err) {console.error(''ERROR''); process.exit(1);}); healthCheck.end();'
            failureThreshold: 5
            initialDelaySeconds: 200
            periodSeconds: 10
            timeoutSeconds: 20
          imagePullPolicy: Always
