rocketchat/rocket/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rocketchat-server
  namespace: rocketchat
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.org/websocket-services: "gateway-cluster-ip-service"
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "300m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - chat.nitamowj.ir
      secretName: nita-tls
  rules:
  - host: chat.nitamowj.ir
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rocketchat-server
            port:
              number: 3000
